--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
-  <script src="script.js"></script>
+  <script defer src="script.js"></script>
 </head>
 
-<body>
-
-</body>
+<body></body>
 
 </html>
